# coding-practice

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: format.yml  python.yml
src/: 1945. Sum of Digits of String After Convert.py  1945_Sum of Digits of String After Convert.py  1945_Sum_of_Digits_of_String_After_Convert.py  1946_Largest Number After Mutating Substring.py  1947_Maximum Compatibility Score Sum.py  1952_Three Divisors.py  1953_Maximum Number of Weeks for Which You Can Work.py  1954_Minimum Garden Perimeter to Collect Enough Apples.py  1961_Check If String Is a Prefix of Array.py  1962_Remove Stones to Minimize the Total.py  1963_Minimum Number of Swaps to Make the String Balanced.py  1979_Find Greatest Common Divisor of Array.py  1980_Find Unique Binary String.py  1981_Minimize the Difference Between Target and Chosen Elements.py  1984_Minimum Difference Between Highest and Lowest of K Scores.py  1985_Find the Kth Largest Integer in the Array.py  1986_Minimum Number of Work Sessions to Finish the Tasks.py  1995_Count Special Quadruplets.py  1996_The Number of Weak Characters in the Game.py  1997_First Day Where You Have Been in All the Rooms.py  2000_Reverse Prefix of Word.py  2001_Number of Pairs of Interchangeable Rectangles.py  2002_Maximum Product of the Length of Two Palindromic Subsequences.py  2012_Sum of Beauty in the Array.py  2013_Detect Squares.py
src/other-interview-questions/: 15_3sum.py  167_two-sum-ii-input-array-is-sorted.py  219_contains-duplicate-ii.py  220_contains-duplicate-iii.py
src/other_interview_questions/: 15_3sum.py  219_contains-duplicate-ii.py
(+98 files in other folders)
