[tool.poetry]
name = "coding-practice"
version = "0.1.0"
description = "Coding Practice"
authors = ["dongminlee94 <kid33629@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

[tool.poetry.dev-dependencies]
black = "22.3.0"
isort = "5.10.1"
pre-commit = "2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
skip_gitignore = true
