[project]
name = "coding-practice"
version = "0.0.0"
description = "Coding Practice"
authors = [{name = "dongminlee94", email = "kid33629@gmail.com"}]
readme = "README.md"

requires-python = ">=3.10,<3.11"

dependencies = []

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.10.1",
    "pre-commit>=3.2.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
skip_gitignore = true
